Start test engine for running simulation